moving index the index out of src

--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="src/normalize.css">
+		<link rel="stylesheet" href="src/main.css">
 	</head>
 	<body>
 		<div class="wrap cf">
@@ -20,7 +20,7 @@
 					<div class="persp-control">
 						<div class="grad"></div>
 					</div>
-					<img src="../resources/mac.svg" alt="">
+					<img src="resources/mac.svg" alt="">
 				</div>
 				<div class="video"></div>
 			</div>
