--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			window.onload = function() {
 				[].forEach.call(document.querySelectorAll('.download'), function(el) {
 					el.addEventListener('click', function(e) {
-						if (navigator.userAgent.indexOf('Mac OS X') == -1) {}
+						if (navigator.userAgent.indexOf('Mac OS X') == -1) {
 							var res = window.confirm("You're not on a Mac. Are you sure you want to download this Mac-only application?");
 							if (!res) e.preventDefault();
 						}
