--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 	<head>
+		<title>Clutter - A download manager app for OS X</title>
+		<meta name="description" content="Clutter gives your files a time-to-live. When the file expires, its archived and out of your hair. Say goodbye to a messy downloads folder!">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="site/normalize.css">
 		<link rel="stylesheet" href="site/main.css">
 		<script>
